<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/notification">
        <SwitchPreference
            android:summaryOff="@string/summary_daily"
            android:summaryOn="@string/summary_daily"
            app:defaultValue="false"
            app:key="@string/key_daiy"
            app:title="@string/title_of_daily" />

        <SwitchPreference
            android:summaryOff="@string/summary_release"
            android:summaryOn="@string/summary_release"
            app:defaultValue="false"
            app:key="@string/key_release"
            app:title="@string/title_of_release" />
    </PreferenceCategory>
</PreferenceScreen>
