<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.main.MainActivity">

    <item
        android:id="@+id/move_to_favorite"
        android:icon="@drawable/ic_favorite_white_24dp"
        android:orderInCategory="2"
        android:title="@string/favorite"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_change_settings"
        android:title="@string/change_language_settings"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/action_change_reminder"
        android:title="@string/reminder_settings"
        app:showAsAction="collapseActionView" />
</menu>